--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,7 +2,7 @@
 h1,
 h2,
 h3 {
-    font-family: Tahoma, Verdana, sans-serif;
+  font-family: Tahoma, Verdana, sans-serif;
 }
 
 p,
@@ -25,26 +25,26 @@ a.cta-input-contactpage,
 .shopping-cart,
 .price-text,
 .game-page-title-games {
-    font-family: var(--font_family);
+  font-family: var(--font_family);
 }
 
 .h2-item,
 .h1heading {
-    padding-left: 5%;
+  padding-left: 5%;
 }
 
 .h2-item {
-    padding-top: 3%;
+  padding-top: 3%;
 }
 
 .h2-item-topbar {
-    padding: 1% 38%;
+  padding: 1% 38%;
 }
 
 .h2-item-topbar,
 .cta-login,
 a.nav-gamespage {
-    color: var(--black);
+  color: var(--black);
 }
 
 .contact-info,
@@ -54,21 +54,21 @@ textarea,
 label,
 nav a,
 .price-text {
-    font-size: larger;
+  font-size: larger;
 }
 
 .contact-info,
 .game-page-title-games,
-.h4-cart-preview {
-    font-size: x-large;
+.h4-cart-preview,
+.h1heading-homepage {
+  font-size: x-large;
 }
 
 .game-link,
 .h1heading,
-.h1heading-homepage,
 .h1heading-gamespage,
 .h2-title-index-page {
-    font-size: xx-large;
+  font-size: xx-large;
 }
 
 #first-section-text,
@@ -77,14 +77,14 @@ nav a,
 .game-text,
 .cta-gamespage,
 .total-cost-preview {
-    font-size: large;
+  font-size: large;
 }
 
 .text-footer,
 .info-footer,
 .newsletter,
 .payment-radio {
-    font-size: small;
+  font-size: small;
 }
 
 .order-confirmed,
@@ -92,7 +92,7 @@ nav a,
 input.cardholder,
 a.cta-input-footer,
 li.nav-gamespage {
-    font-size: medium;
+  font-size: medium;
 }
 
 header,
@@ -118,5 +118,20 @@ a.cta-login-contactpage,
 a.cta-input-contactpage,
 .cta-homepage,
 .icon-cart {
-    color: var(--white);
+  color: var(--white);
+}
+
+.h1heading {
+  padding: 20px;
+  margin: 0% 0% 3% 0%;
+}
+
+.h1heading-homepage {
+  padding: 0px 20px;
+  margin: 0%;
+}
+
+.h1heading-gamespage {
+  padding-top: 2px;
+  padding-bottom: 0px;
 }
